FEM-1736 (#313)
* upgrade cradle to 3.0.0